Switch chatbot backend to Java 17